--- a/dictionaries.yml
+++ b/dictionaries.yml
@@ -8,8 +8,24 @@
         - { name: 'jane', groups: 'wheel' }
         - { name: 'joe', groups: 'root' }
 
+      drive_types:
+        ssd:
+          raid_size: 23
+          spares_per_node: 1
+        sas:
+          raid_size: 22
+          spares_per_node: 2
+        fcal:
+          raid_size: 22
+          spares_per_node: 2
 
     tasks:
+
+    - debug:
+        msg: "{{ drive_types.sas.spares_per_node }}"
+        #msg: "{{ drive_types['sas']['spares_per_node'] }}"
+      
+    - pause: 
 
     - name: Users exist and are in the correct groups
       debug:
