--- a/ontap_vserver_lif.yml
+++ b/ontap_vserver_lif.yml
@@ -51,7 +51,7 @@
     - name: Get LIF for vserver - vs1
       set_fact:
          vs1_lif: "{{ vs1_lif | default([]) + [ ontap_facts.net_interface_info[item].address ] }}"
-      with_items: "{{ interfaces }}"
+      loop: "{{ interfaces }}"
       when: ontap_facts.net_interface_info[item].vserver == 'vs1'
       
     - name: Create vserver - vs2
