--- a/ontap_interface_fact_role.yml
+++ b/ontap_interface_fact_role.yml
@@ -17,27 +17,25 @@
 
     vars:
       # First load the regions from whichever file you need
-      regions: "{{ lookup('file', 'regions.yml') | from_yaml }}"
-      peers: "{{ query('sl_region_peers', regions=regions, hostname=netapp_source_cluster) }}"
+      #regions: "{{ lookup('file', 'regions.yml') | from_yaml }}"
+      #peers: "{{ query('sl_region_peers', regions=regions, hostname=netapp_source_cluster) }}"
       
-      #netapp_dest_cluster:
-      #  - 192.168.2.136
-      #  - 192.168.2.141
+      netapp_dest_cluster:
+        - 192.168.2.136
+        - 192.168.2.141
       
-      input: &input
-        hostname: "{{ netapp_source_cluster }}"
-        username: "{{ netapp_username }}"
-        password: "{{ netapp_password }}"
+      #input: &input
+      #  hostname: "{{ netapp_source_cluster }}"
+      #  username: "{{ netapp_username }}"
+      #  password: "{{ netapp_password }}"
     
     tasks:
-    - debug: var=regions
-    - pause:
-    - name: Show peer clusters for "{{ netapp_source_cluster }}"
-      set_fact:
-        netapp_dest_cluster: "{{ query('sl_region_peers', regions=regions, hostname=netapp_source_cluster) }}"
+    #- name: Show peer clusters for "{{ netapp_source_cluster }}"
+    #  set_fact:
+    #    netapp_dest_cluster: "{{ query('sl_region_peers', regions=regions, hostname=netapp_source_cluster) }}"
     
-    - debug: var=netapp_dest_cluster
-    - pause:
+    #- debug: var=netapp_dest_cluster
+    #- pause:
 
     - name: Gathering Intercluster LIFs on Source cluster - "{{ netapp_source_cluster }}"
       na_ontap_info:
@@ -62,6 +60,10 @@
     - include_role:
         name: cluster_peer_creation
       vars:
+        input: &input
+          hostname: "{{ netapp_source_cluster }}"
+          username: "{{ netapp_username }}"
+          password: "{{ netapp_password }}"
         <<: *input
       loop: "{{ netapp_dest_cluster }}"
       
