--- a/node_location.yml
+++ b/node_location.yml
@@ -3,9 +3,17 @@
   gather_facts: no
   
   vars:
-    - node_name_series: [ 0, a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, q, r, s, t, u, v, w, x, y, z ]
-    - node_name_sequences: {a: 1, b: 2, c: 3, d: 4, e: 5, f: 6, g: 7, h: 8, i: 9, j: 10, k: 11, l: 12, m: 13, n: 14, o: 15, p: 16, q: 17, r: 18, s: 19, t: 20, u: 21, v: 22, w: 23, x: 24, y: 25, z: 26 }
-     
+    node_name_series: [ 0, a, b, c, d, e, f, g, h, i, j, k, l, m, n, o, p, q, r, s, t, u, v, w, x, y, z ]
+    node_name_sequences: {a: 1, b: 2, c: 3, d: 4, e: 5, f: 6, g: 7, h: 8, i: 9, j: 10, k: 11, l: 12, m: 13, n: 14, o: 15, p: 16, q: 17, r: 18, s: 19, t: 20, u: 21, v: 22, w: 23, x: 24, y: 25, z: 26 }
+    nodes_to_deploy: 2
+    node1_name: cluster-1
+    node2_name: cluster-2
+    cluster_deploy_config:
+      2:
+       disks: 
+          - {node: "{{ node1_name }}" }
+          - {node: "{{ node2_name }}" }
+    disks: "{{ cluster_deploy_config[nodes_to_deploy]['disks'] }}"
  # vars_prompt:
    # - name: netapp_hostname
    #   prompt: Enter the NetApp cluster name
@@ -17,7 +25,9 @@
    #   prompt: Enter the NetApp cluster password
    #   no_log: true
   tasks:
-  
+  - debug: var=disks
+      #msg: "{{ cluster_deploy_config[nodes_to_deploy]['disks'] }}" 
+  - pause:
   - name: Get Ontap facts
     na_ontap_info:
       state: info
@@ -53,7 +63,10 @@
   - fail: 
        msg: "Exapnsion not possible for ODD numbers... Existing.. "
     when: reg_numofnodes.user_input |int is not divisibleby 2
-
+  - fail:
+      msg: "Expansion allow by 2 node or 4 node"
+    when: reg_numofnodes.user_input |int > 4
+  
   - set_fact:
       num_of_new_nodes: "{{ reg_numofnodes.user_input |int }}"
     when:   reg_numofnodes.user_input != ""
