--- a/cluster_validation.yml
+++ b/cluster_validation.yml
@@ -1,58 +1,77 @@
 ---
-  - name: Validation
-    hosts: localhost
-    gather_facts: no
+- name                : Cluster Expansion Validation
+  hosts               : localhost
+  gather_facts        : no
             
-    vars:
-      hostname: abdultest
-      username: admin
-      password: Temp12345
-      
-    
-    tasks:
-    - pause             :
-        prompt          : "Enter the STORSYS JIRA Request Number for this expansion validation"
-      register          : cr_number
-        
-    - debug             : var=cr_number.user_input
-        
-    - fail:
-        msg             : "The Change Request Number entered is invalid"
-      when:
+  vars                :
+    hostname          : abdultest
+    username          : admin
+    password          : Temp12345
+          
+  tasks               :
+  - pause             :
+      prompt          : "Enter the STORSYS JIRA Request Number for this expansion validation"
+    register          : cr_number
+          
+  - debug             : var=cr_number.user_input
+          
+  - fail              :
+      msg             : "The Change Request Number entered is invalid"
+    when              :
                         - cr_number.user_input == ""
                         - not cr_number.user_input is regex("^[0-9]+$")
 
-    - include_vars:
-        file            : "{{ playbook_dir + '/ansible-data/varfiles/' + hostname + '/var_' + hostname + '_' + cr_number.user_input + '.yml' }}"
-    
-    - set_fact:
-        check_result    : ["Check result for cluster '{{ hostname }}'"]
-        testpassed      : []
-        testfailed      : []
-        cmdlines        : []
-     
-    - name              : Get NetApp info (Password Authentication)
-      na_ontap_info     :
-        state           : info
-        hostname        : "192.168.2.136"
-        username        : "admin"
-        password        : "Temp12345"
-        validate_certs  : no
-        https           : no
-        gather_subset   :
-                         - "!volume_info"
-                         - "!lun_info"
-      register          : ontap_info
+  - include_vars      :
+      file            : "{{ playbook_dir + '/ansible-data/varfiles/' + hostname + '/var_' + hostname + '_' + cr_number.user_input + '.yml' }}"
+      
+  - set_fact          :
+      check_result    : ["Check result for cluster '{{ hostname }}'"]
+      testpassed      : []
+      testfailed      : []
+      cmdlines        : []
+          
+  - name              : Get NetApp info (Password Authentication)
+    na_ontap_info     :
+      state           : info
+      hostname        : "{{ hostname }}"
+      username        : "admin"
+      password        : "Temp12345"
+      validate_certs  : no
+      https           : no
+      gather_subset   :
+                        - "!volume_info"
+                        - "!lun_info"
+    register          : ontap_info
 
-    - set_fact          :
-        ontap_facts     : "{{ ontap_info.ontap_info                                                                         }}"
-     
-    - set_fact          :
-        check_result    : "{{ check_result + [ ' | POST-CHECK SECTION' ]                                                    }}"
+  - set_fact          :
+      ontap_facts     : "{{ ontap_info.ontap_info                                                                               }}"
 
-    - include_role:
-        name: expansion_validation
-                                
-    - debug             : var=testpassed
-    - debug             : var=testfailed
+  - name              : Create list of unique node model
+    set_fact:
+      uniq_node_model  : "{{ uniq_node_model |default([]) + [ { 'model' : model} ]                                              }}"
+    with_items          : "{{ ontap_facts.system_node_info }}"
+    vars                :
+      model             : "{{ ontap_facts.system_node_info[item].node_model                                                     }}"
+
+  - set_fact          :
+      model           : "{{ item.model                                                                                          }}"
+    with_items: "{{ uniq_node_model | unique }}"
+  
+  - set_fact          :
+      clucheck        : "{{ hostname                                                                                            }}"
+    #when              : model != 'SIMBOX' - original setting
+    when              : model == 'SIMBOX' # for testing
+  
+  #- set_fact          :
+  #    clucheck        : "cDOT96"
+  #  when              : model == 'SIMBOX'
     
+  - set_fact          :
+      check_result    : "{{ check_result + [ ' | POST-CHECK SECTION' ]                                                          }}"
+
+  - include_role      :
+      name            : expansion_validation
+                                  
+  - debug             : var=testpassed
+  - debug             : var=testfailed
+      
